--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       align-items: center;
       position: sticky;
       top: 0;
-      z-index: 1000;
+      z-index: 1001;
     }
     header img { height: 48px; }
     nav {
@@ -88,7 +88,7 @@
       text-decoration: none;
       font-size: 1.1rem;
       box-shadow: 0 0 15px rgba(0,255,200,0.5);
-      z-index: 1001;
+      z-index: 1000;
     }
     section {
       min-height: 100vh;
@@ -175,11 +175,12 @@
     <h2>Build the Future</h2>
     <p>Open-source tech for digital nomads, creators, and explorers.</p>
   </section>
-  <section id="subscribe" style="background: var(--bg-subscribe);">
+    <section id="subscribe" style="background: var(--bg-subscribe);">
     <h2>Websites & Apps for $20/month</h2>
     <p>Get a personal site, app, or support package tailored to your vision. Clean, simple, open-source—powered by 3dvr.tech.</p>
     <a href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" class="sticky-cta" style="position: static; margin-top: 2rem;">Subscribe Now</a>
   </section>
+
   <section id="features" style="background: var(--bg-features);">
     <h2>What You Get</h2>
     <div class="card-grid">
@@ -190,6 +191,7 @@
       <a href="community.html" class="card"><h3>Builder Community</h3><p>Join a community of creators, developers, and dreamers.</p></a>
     </div>
   </section>
+
   <section id="testimonials" style="background: var(--bg-testimonials);">
     <h2>What Our Clients Say</h2>
     <div class="card-grid">
@@ -199,29 +201,72 @@
       <div class="card testimonial-card" data-link="https://www.sdvanlife.com/"><h3>SD Vanlife</h3><p>“Thomas and 3dvr.tech gave us the tools and guidance we needed to launch our van conversion business online.”</p></div>
     </div>
   </section>
+
   <section id="team" style="background: var(--bg-team);">
     <h2>Meet the Team</h2>
     <div class="card-grid">
-      <div class="card team-card" data-link="https://tmsteph.com"><img src="Thomas_Stephens.jpg" alt="Thomas Stephens" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;"><h3>Thomas Stephens</h3><p><strong>CEO / CTO / Founder</strong></p><p>Visionary technologist creating the tools of tomorrow.</p></div>
-      <div class="card team-card" data-link="https://bodhi-lowski.vercel.app/"><img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;"><h3>Bodhi Lowski</h3><p><strong>Chief Marketing Officer</strong></p><p>Building the brand through grassroots storytelling and growth.</p></div>
-      <div class="card team-card" data-link="https://david-martinez.vercel.app/"><img src="David_Martinez.jpg" alt="David Martinez" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;"><h3>David Martinez</h3><p><strong>Lead Developer</strong></p><p>Crafting immersive 3D and web experiences with finesse.</p></div>
-      <div class="card team-card" data-link="https://esai-gamboa.vercel.app/"><img src="Esai_Gamboa.jpg" alt="Esai Gamboa" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;"><h3>Esai Gamboa</h3><p><strong>Developer</strong></p><p>Frontend expert focused on clean, responsive interfaces.</p></div>
-      <div class="card team-card" data-link="https://brandon-adolfo.vercel.app/"><img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;"><h3>Brandon Adolfo</h3><p><strong>Developer</strong></p><p>Cross-platform mobile builder with an eye for design.</p></div>
+      <div class="card team-card" data-link="https://tmsteph.com">
+        <img src="Thomas_Stephens.jpg" alt="Thomas Stephens" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+        <h3>Thomas Stephens</h3>
+        <p><strong>CEO / CTO / Founder</strong></p>
+        <p>Visionary technologist creating the tools of tomorrow.</p>
+      </div>
+      <div class="card team-card" data-link="https://bodhi-lowski.vercel.app/">
+        <img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+        <h3>Bodhi Lowski</h3>
+        <p><strong>Chief Marketing Officer</strong></p>
+        <p>Building the brand through grassroots storytelling and growth.</p>
+      </div>
+      <div class="card team-card" data-link="https://david-martinez.vercel.app/">
+        <img src="David_Martinez.jpg" alt="David Martinez" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+        <h3>David Martinez</h3>
+        <p><strong>Lead Developer</strong></p>
+        <p>Crafting immersive 3D and web experiences with finesse.</p>
+      </div>
+      <div class="card team-card" data-link="https://esai-gamboa.vercel.app/">
+        <img src="Esai_Gamboa.jpg" alt="Esai Gamboa" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+        <h3>Esai Gamboa</h3>
+        <p><strong>Developer</strong></p>
+        <p>Frontend expert focused on clean, responsive interfaces.</p>
+      </div>
+      <div class="card team-card" data-link="https://brandon-adolfo.vercel.app/">
+        <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+        <h3>Brandon Adolfo</h3>
+        <p><strong>Developer</strong></p>
+        <p>Cross-platform mobile builder with an eye for design.</p>
+      </div>
     </div>
   </section>
-  <section id="about" style="background: var(--bg-about);">
+    <section id="about" style="background: var(--bg-about);">
     <h2>About 3dvr.tech</h2>
-    <p style="max-width: 700px; margin: 1rem auto; font-size: 1.3rem;">We believe everyone deserves the tools to build their digital life. We're creating an ecosystem of open-source hardware, software, and support—starting with $20/month personal services. Our mission is to empower creators, entrepreneurs, and digital nomads everywhere.</p>
+    <p style="max-width: 700px; margin: 1rem auto; font-size: 1.3rem;">
+      We believe everyone deserves the tools to build their digital life.
+      We're creating an ecosystem of open-source hardware, software, and support—starting with $20/month personal services.
+      Our mission is to empower creators, entrepreneurs, and digital nomads everywhere.
+    </p>
   </section>
+
   <footer style="background: #111; color: #aaa; text-align: center; padding: 2rem 1rem; font-size: 0.95rem;">
     <p>&copy; 2025 <a href="https://3dvr.tech" target="_blank" style="color: var(--accent);">3dvr.tech</a> — Open Source. Open Future.</p>
   </footer>
+
   <script>
     const toggle = document.getElementById('mobileMenuToggle');
     const nav = document.getElementById('mainNav');
     toggle.addEventListener('click', () => {
       nav.classList.toggle('active');
     });
+
+    // Close mobile nav when a link is clicked
+    document.querySelectorAll('nav a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (window.innerWidth <= 768) {
+          nav.classList.remove('active');
+        }
+      });
+    });
+
+    // Clickable testimonial & team cards
     document.querySelectorAll('.testimonial-card, .team-card').forEach(card => {
       const link = card.getAttribute('data-link');
       if (link) {
@@ -233,3 +278,5 @@
   </script>
 </body>
 </html>
+
+  
