--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="dark light" />
   <title>3dvr.tech</title>
   <link rel="icon" href="3DVRfavicon.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
   <style>
     html { scroll-behavior: smooth; }
     :root {
@@ -20,14 +20,24 @@
       --text-light: #ffffff;
       --text-dark: #000000;
     }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
       font-family: 'Inter', sans-serif;
       color: var(--text-light);
       background: var(--bg-hero);
       line-height: 1.7;
     }
-    h1, h2, h3 { font-family: 'Poppins', sans-serif; }
+
+    h1, h2, h3 {
+      font-family: 'Poppins', sans-serif;
+    }
+
     header {
       background: rgba(0, 0, 0, 0.6);
       backdrop-filter: blur(10px);
@@ -39,11 +49,17 @@
       top: 0;
       z-index: 1001;
     }
-    header img { height: 48px; }
+
+    header img {
+      height: 48px;
+      max-width: 150px;
+    }
+
     nav {
       display: flex;
       gap: 1rem;
     }
+
     nav a {
       color: white;
       text-decoration: none;
@@ -53,30 +69,49 @@
       border-radius: 6px;
       transition: background 0.3s;
     }
-    nav a:hover { background: rgba(255,255,255,0.1); }
-    .menu-toggle { display: none; flex-direction: column; cursor: pointer; gap: 4px; }
+
+    nav a:hover {
+      background: rgba(255,255,255,0.1);
+    }
+
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      gap: 4px;
+    }
+
     .menu-toggle span {
       width: 25px;
       height: 3px;
       background: white;
     }
+
     @media (max-width: 768px) {
       nav {
         position: absolute;
         top: 100%;
         right: 0;
-        background: rgba(44, 62, 80, 0.95); /* ✅ Dark-mode compatible background */
+        background: rgba(44, 62, 80, 0.95);
         flex-direction: column;
         display: none;
         width: 200px;
       }
-      nav.active { display: flex; }
+
+      nav.active {
+        display: flex;
+      }
+
       nav a {
         padding: 1rem;
         border-top: 1px solid rgba(255,255,255,0.1);
       }
-      .menu-toggle { display: flex; }
+
+      .menu-toggle {
+        display: flex;
+      }
     }
+
     .sticky-cta {
       position: fixed;
       bottom: 20px;
@@ -91,7 +126,82 @@
       box-shadow: 0 0 15px rgba(0,255,200,0.5);
       z-index: 1000;
     }
-      </style>
+
+    section {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 6rem 2rem;
+      text-align: center;
+    }
+
+    section h2 {
+      font-size: clamp(2.5rem, 6vw, 4rem);
+      margin-bottom: 1rem;
+    }
+
+    section p {
+      font-size: clamp(1.2rem, 2vw, 1.5rem);
+      max-width: 800px;
+      margin-bottom: 1.5rem;
+    }
+
+    .hero img {
+      max-width: 90vw;
+      max-height: 400px;
+      height: auto;
+      margin-bottom: 2rem;
+    }
+
+    .hero h2 {
+      font-size: clamp(3rem, 8vw, 5rem);
+    }
+
+    .hero p {
+      font-size: clamp(1.5rem, 2.5vw, 1.7rem);
+    }
+
+    .card-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+      max-width: 1400px;
+      padding: 0 1rem;
+      margin-top: 2rem;
+    }
+
+    .card {
+      flex: 1 1 calc(20% - 2rem);
+      min-width: 220px;
+      max-width: 260px;
+      background: rgba(255,255,255,0.08);
+      border-radius: 14px;
+      padding: 1.5rem;
+      text-align: center;
+      transition: all 0.3s ease;
+      cursor: pointer;
+      text-decoration: none;
+      color: white;
+    }
+
+    .card:hover {
+      background: rgba(255,255,255,0.15);
+      transform: translateY(-5px);
+    }
+
+    .card h3 {
+      color: var(--accent);
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .card p {
+      font-size: 1rem;
+    }
+  </style>
 </head>
 <body id="top">
   <header>
@@ -116,8 +226,7 @@
     <h2>Build the Future</h2>
     <p>Open-source tech for digital nomads, creators, and explorers.</p>
   </section>
-
-  <section id="subscribe" style="background: var(--bg-subscribe);">
+    <section id="subscribe" style="background: var(--bg-subscribe);">
     <h2>Websites & Apps for $20/month</h2>
     <p>Get a personal site, app, or support package tailored to your vision. Clean, simple, open-source—powered by 3dvr.tech.</p>
     <a href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" class="sticky-cta" style="position: static; margin-top: 2rem;">Subscribe Now</a>
@@ -193,6 +302,7 @@
   </footer>
 
   <script>
+    // Hamburger toggle
     const toggle = document.getElementById('mobileMenuToggle');
     const nav = document.getElementById('mainNav');
 
@@ -200,7 +310,7 @@
       nav.classList.toggle('active');
     });
 
-    // Close mobile nav when a link is clicked
+    // Auto-close mobile nav when link is clicked
     document.querySelectorAll('nav a').forEach(link => {
       link.addEventListener('click', () => {
         if (window.innerWidth <= 768) {
@@ -209,7 +319,7 @@
       });
     });
 
-    // Clickable testimonial & team cards
+    // Make testimonial & team cards clickable
     document.querySelectorAll('.testimonial-card, .team-card').forEach(card => {
       const link = card.getAttribute('data-link');
       if (link) {
@@ -221,5 +331,3 @@
   </script>
 </body>
 </html>
-
-    
