--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
       <a href="#testimonials">Testimonials</a>
       <a href="#team">Team</a>
       <a href="#about">About</a>
+      <a href="https://3dvr-portal.vercel.app/" target="_blank">Portal</a>
     </nav>
+
   </header>
 
   <a class="sticky-cta" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank">Subscribe</a>
