--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
       --text-dark: #000000;
     }
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
       font-family: 'Inter', sans-serif;
@@ -35,9 +31,7 @@
       line-height: 1.7;
     }
 
-    h1, h2, h3 {
-      font-family: 'Poppins', sans-serif;
-    }
+    h1, h2, h3 { font-family: 'Poppins', sans-serif; }
 
     header {
       background: rgba(0, 0, 0, 0.6);
@@ -51,8 +45,8 @@
       z-index: 1001;
       opacity: 0;
       transform: translateY(-20px);
-      animation: fadeSlideIn 1.8s ease-out forwards;
-      animation-delay: 3s;
+      animation: fadeSlideIn 0.5s ease-out forwards; /* fast fade */
+      animation-delay: 0.5s; /* fast delay */
     }
 
     header img {
@@ -132,95 +126,8 @@
       z-index: 1000;
     }
 
-    section {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 6rem 2rem;
-      text-align: center;
-    }
-
-    section h2 {
-      font-size: clamp(2.5rem, 6vw, 4rem);
-      margin-bottom: 1rem;
-    }
-
-    section p {
-      font-size: clamp(1.2rem, 2vw, 1.5rem);
-      max-width: 800px;
-      margin-bottom: 1.5rem;
-    }
-
-    .hero img {
-      max-width: 90vw;
-      max-height: 400px;
-      height: auto;
-      margin-bottom: 2rem;
-      opacity: 0;
-      animation: fadeIn 3s ease-out forwards;
-    }
-
-    .hero h2 {
-      font-size: clamp(3rem, 8vw, 5rem);
-    }
-
-    .hero p {
-      font-size: clamp(1.5rem, 2.5vw, 1.7rem);
-    }
-
-    .card-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-      max-width: 1400px;
-      padding: 0 1rem;
-      margin-top: 2rem;
-    }
-
-    .card {
-      flex: 1 1 calc(20% - 2rem);
-      min-width: 220px;
-      max-width: 260px;
-      background: rgba(255,255,255,0.08);
-      border-radius: 14px;
-      padding: 1.5rem;
-      text-align: center;
-      transition: all 0.3s ease;
-      cursor: pointer;
-      text-decoration: none;
-      color: white;
-    }
-
-    .card:hover {
-      background: rgba(255,255,255,0.15);
-      transform: translateY(-5px);
-    }
-
-    .card h3 {
-      color: var(--accent);
-      font-size: 1.2rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .card p {
-      font-size: 1rem;
-    }
-
-    @keyframes fadeSlideIn {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-      }
-    }
+    @keyframes fadeSlideIn { to { opacity: 1; transform: translateY(0); } }
+    @keyframes fadeIn { to { opacity: 1; } }
   </style>
 </head>
 <body id="top">
@@ -236,10 +143,10 @@
       <a href="#testimonials">Testimonials</a>
       <a href="#team">Team</a>
       <a href="#about">About</a>
-      <a href="https://3dvr-portal.vercel.app/" target="_blank">Portal</a>
+      <a href="https://3dvr-portal.vercel.app/">Portal</a> <!-- no target="_blank" -->
     </nav>
-
   </header>
+
 
   <a class="sticky-cta" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank">Subscribe</a>
 
