Update index.html fade and portal link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       opacity: 0;
       transform: translateY(-20px);
       animation: fadeSlideIn 1.8s ease-out forwards;
-      animation-delay: 3s;
+      animation-delay: 1s;
     }
 
     header img {
@@ -236,7 +236,7 @@
       <a href="#testimonials">Testimonials</a>
       <a href="#team">Team</a>
       <a href="#about">About</a>
-      <a href="https://3dvr-portal.vercel.app/" target="_blank">Portal</a>
+      <a href="https://3dvr-portal.vercel.app/">Portal</a>
     </nav>
 
   </header>
