--- a/index.html
+++ b/index.html
@@ -276,39 +276,45 @@
   </section>
 
   <section id="team" style="background: var(--bg-team);">
-    <h2>Meet the Team</h2>
-    <div class="card-grid">
-      <div class="card team-card" data-link="https://tmsteph.com">
-        <img src="Thomas_Stephens.jpg" alt="Thomas Stephens" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
-        <h3>Thomas Stephens</h3>
-        <p><strong>CEO / CTO / Founder</strong></p>
-        <p>Visionary technologist creating the tools of tomorrow.</p>
-      </div>
-      <div class="card team-card" data-link="https://bodhi-lowski.vercel.app/">
-        <img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
-        <h3>Bodhi Lowski</h3>
-        <p><strong>Chief Marketing Officer</strong></p>
-        <p>Building the brand through grassroots storytelling and growth.</p>
-      </div>
-      <div class="card team-card" data-link="https://david-martinez.vercel.app/">
-        <img src="David_Martinez.jpg" alt="David Martinez" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
-        <h3>David Martinez</h3>
-        <p><strong>Lead Developer</strong></p>
-        <p>Crafting immersive 3D and web experiences with finesse.</p>
-      </div>
-      <div class="card team-card" data-link="https://esai-gamboa.vercel.app/">
-        <img src="Esai_Gamboa.jpg" alt="Esai Gamboa" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
-        <h3>Esai Gamboa</h3>
-        <p><strong>Developer</strong></p>
-        <p>Frontend expert focused on clean, responsive interfaces.</p>
-      </div>
-      <div class="card team-card" data-link="https://brandon-adolfo.vercel.app/">
-        <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
-        <h3>Brandon Adolfo</h3>
-        <p><strong>Developer</strong></p>
-        <p>Cross-platform mobile builder with an eye for design.</p>
-      </div>
+  <h2>Meet the Team</h2>
+  <div class="card-grid">
+    <div class="card team-card" data-link="https://tmsteph.com">
+      <img src="Thomas_Stephens.jpg" alt="Thomas Stephens" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+      <h3>Thomas Stephens</h3>
+      <p><strong>CEO / CTO / Founder</strong></p>
+      <p>Visionary technologist creating the tools of tomorrow.</p>
     </div>
+    <div class="card team-card" data-link="https://bodhi-lowski.vercel.app/">
+      <img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+      <h3>Bodhi Lowski</h3>
+      <p><strong>Chief Marketing Officer</strong></p>
+      <p>Building the brand through grassroots storytelling and growth.</p>
+    </div>
+    <div class="card team-card" data-link="https://david-martinez.vercel.app/">
+      <img src="David_Martinez.jpg" alt="David Martinez" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+      <h3>David Martinez</h3>
+      <p><strong>Lead Developer</strong></p>
+      <p>Crafting immersive 3D and web experiences with finesse.</p>
+    </div>
+    <div class="card team-card" data-link="https://esai-gamboa.vercel.app/">
+      <img src="Esai_Gamboa.jpg" alt="Esai Gamboa" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+      <h3>Esai Gamboa</h3>
+      <p><strong>Developer</strong></p>
+      <p>Frontend expert focused on clean, responsive interfaces.</p>
+    </div>
+    <div class="card team-card" data-link="https://brandon-adolfo.vercel.app/">
+      <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+      <h3>Brandon Adolfo</h3>
+      <p><strong>Developer</strong></p>
+      <p>Cross-platform mobile builder with an eye for design.</p>
+    </div>
+    <div class="card team-card" data-link="https://3dvr-mark-wells.vercel.app/">
+      <img src="mark-wells.png" alt="Mark Wells" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+      <h3>Mark Wells</h3>
+      <p><strong>Senior Developer</strong></p>
+      <p>10+ years in software design, specializing in real-time embedded systems and performance-critical code.</p>
+    </div>
+  </div>
   </section>
     <section id="about" style="background: var(--bg-about);">
     <h2>About 3dvr.tech</h2>
