Update index.html subscribe section
add $0 and $5 plans

--- a/index.html
+++ b/index.html
@@ -247,12 +247,28 @@
     <img src="3DVR.png" alt="3dvr.tech logo" />
     <h2>Build the Future</h2>
     <p>Open-source tech for digital nomads, creators, and explorers.</p>
-  </section>
-    <section id="subscribe" style="background: var(--bg-subscribe);">
-    <h2>Websites & Apps for $20/month</h2>
-    <p>Get a personal site, app, or support package tailored to your vision. Clean, simple, open-source—powered by 3dvr.tech.</p>
-    <a href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" class="sticky-cta" style="position: static; margin-top: 2rem;">Subscribe Now</a>
-  </section>
+<section id="subscribe" style="background: var(--bg-subscribe);">
+  <h2>Choose Your Plan</h2>
+  <p>Start building your vision with the plan that fits you best. Upgrade anytime.</p>
+  <div class="card-grid">
+    <div class="card">
+      <h3>Free Plan</h3>
+      <p>Get limited access to tools, resources, and community. Perfect for curious explorers.</p>
+      <a href="https://portal.3dvr.tech/" target="_blank" class="sticky-cta" style="position: static; margin-top: 1rem;">Join Free</a>
+    </div>
+    <div class="card">
+      <h3>$5 / Month</h3>
+      <p>Early Supporter Tier: Show your support, unlock exclusive updates, and help shape the future.</p>
+      <a href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" class="sticky-cta" style="position: static; margin-top: 1rem;">Support Us</a>
+    </div>
+    <div class="card">
+      <h3>$20 / Month</h3>
+      <p>Full Access: Website, app, tech support, consulting, and more. Fully tailored to your goals.</p>
+      <a href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" class="sticky-cta" style="position: static; margin-top: 1rem;">Subscribe Now</a>
+    </div>
+  </div>
+</section>
+
 
   <section id="features" style="background: var(--bg-features);">
     <h2>What You Get</h2>
