Update index.html added Portfolio link to mainNav

--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
       <a href="#testimonials">Testimonials</a>
       <a href="#team">Team</a>
       <a href="#about">About</a>
+      <a href="pages/portfolio.html">Portfolio</a>
       <a href="https://3dvr-portal.vercel.app/">Portal</a>
     </nav>
 
