Update index.html add open source about section

--- a/index.html
+++ b/index.html
@@ -336,15 +336,16 @@
       <p>10+ years in software design, specializing in real-time embedded systems and performance-critical code.</p>
     </div>
   </div>
-  </section>
-    <section id="about" style="background: var(--bg-about);">
-    <h2>About 3dvr.tech</h2>
-    <p style="max-width: 700px; margin: 1rem auto; font-size: 1.3rem;">
-      We believe everyone deserves the tools to build their digital life.
-      We're creating an ecosystem of open-source hardware, software, and support—starting with $20/month personal services.
-      Our mission is to empower creators, entrepreneurs, and digital nomads everywhere.
-    </p>
-  </section>
+    
+ <section id="about" style="background: var(--bg-about);">
+  <h2>About 3dvr.tech</h2>
+  <p style="max-width: 700px; margin: 1rem auto; font-size: 1.3rem;">
+    We believe everyone deserves the tools to build their digital life.<br />
+    We're creating an ecosystem of <strong>open-source</strong> hardware, software, and support—starting with $20/month personal services.<br />
+    Our mission is to empower creators, entrepreneurs, and digital nomads everywhere.<br />
+    Contributions welcome on <a href="https://github.com/tmsteph/3dvr-web" target="_blank" style="color: var(--accent);">GitHub</a>.
+  </p>
+</section>
 
   <footer style="background: #111; color: #aaa; text-align: center; padding: 2rem 1rem; font-size: 0.95rem;">
   <p>
