Update index.html fixed closing tag of team section.

--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
       <p>10+ years in software design, specializing in real-time embedded systems and performance-critical code.</p>
     </div>
   </div>
+  </section>
     
  <section id="about" style="background: var(--bg-about);">
   <h2>About 3dvr.tech</h2>
