Update index.html adjust free plan link

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <div class="card">
       <h3>Free Plan</h3>
       <p>Get limited access to tools, resources, and community. Perfect for curious explorers.</p>
-      <a href="https://portal.3dvr.tech/" target="_blank" class="sticky-cta" style="position: static; margin-top: 1rem;">Join Free</a>
+      <a href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" class="sticky-cta" style="position: static; margin-top: 1rem;">Join Free</a>
     </div>
     <div class="card">
       <h3>$5 / Month</h3>
